--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -211,7 +211,7 @@ on boot
 	write /dev/stune/top-app/schedtune.prefer_idle 1
 	write /dev/stune/top-app/schedtune.dynamic_boost 1
 	write /dev/stune/rt/schedtune.boost 30
-	 write /dev/stune/rt/schedtune.prefer_idle 1
+	write /dev/stune/rt/schedtune.prefer_idle 1
 	write /dev/stune/foreground/schedtune.prefer_idle 1
 
 on enable-eas-power
@@ -227,6 +227,9 @@ on enable-eas-power
   write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036800"
   write /sys/module/cpu_boost/parameters/dynamic_stune_boost 1
   write /sys/module/cpu_boost/parameters/input_boost_ms 100
+
+  #Set IO scheduler to Maple
+  setprop sys.io.scheduler "maple"
 
   #schedtune stuff
   write /dev/stune/rt/schedtune.boost 0
