Swithc to maple

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -590,4 +590,4 @@ service time_daemon /system/vendor/bin/time_daemon
     writepid /dev/cpuset/system-background/tasks
 
 on property:dev.bootcomplete=1
-    setprop sys.io.scheduler "bfq"
+    setprop sys.io.scheduler "maple"
